update homepage and css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Sun Weiran</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
+		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
 		<nav>
@@ -14,21 +14,22 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Sun Weiran!</h1>
-				<p>I graduated from National University of Singapore in 2018 with a distinction bachelor degree in Business Analytics (Honours). Currently I am working as a Data Scientist in NCS Singapore, focusing on delivering both operational and prove-of-concept data science projects to major local clients such as Changi Airport and Land Transport Authority (LTA). I have successful experiences in predictive modeling, machine learning, data visualisation, data pipeling and analysis. I am strong in Python, SQL and Tableau.</p>
-				<p>Some of my past and active projects are:
-					<ul>
-						<li>Flight Passenger Load Prediction (Airport/POC) - <i>improved prediction accuracy from existing solution by ~20%</i></li>
-						<li>Future Taxi Demand Prediction (Airport/Operational) - <i>customized and robust live predictive engine with ~80% accuracy</i></li>
-						<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i>end-to-end data pipeline and Tableau dashboard visualisation</i></li>
-					</ul>
-				</p>
-				<p>Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
+        		<h2>Data Scientist</h2>
+				<p>I graduated from National University of Singapore in 2018 with a distinction bachelor degree in Business Analytics (Honours). Currently I am working as a Data Scientist in NCS Singapore, focusing on delivering both operational and prove-of-concept data science projects to major local clients such as Changi Airport and Land Transport Authority (LTA).
+				<p>Some of my past and active projects are:</p>
+				<ul>
+					<li>Flight Passenger Load Prediction (Airport/POC) - <i>Improved prediction accuracy from existing solution by <b>~20%</b></i></li>
+					<li>Future Taxi Demand Prediction (Airport/Operational) - <i>Customized and robust live predictive engine with <b>~80% </b> accuracy</i></li>
+					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><b>End-to-end</b> data pipeline and Tableau dashboard visualisation</i></li>
+				</ul>
+
+				<p>I have proven and successful experiences in predictive modeling, machine learning, data analysis and visualization. With good understanding of various data science algorithms, I am able to engineer and deliver in <b>Python, SQL and Tableau</b>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
 				<p>More about myself can be found in my <a href="/cv">CV</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:sunwrn@gmail.com">email</a></li>
+        		<li><a href="mailto:sunwrn@gmail.com">Email me</a></li>
         		<li><a href="https://github.com/ianforme">github.com/ianforme</a></li>
 			</ul>
 		</footer>
