add cv page placeholder

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<nav>
     		<ul>
-        		<li><a href="/">Home</a></li>
-        		<li><a href="/cv">CV</a></li>
+        		<li><a>Home</a></li>
+        		<li><a href="./cv/index.html">CV</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -18,13 +18,13 @@
 				<p>I graduated from National University of Singapore in 2018 with a distinction bachelor degree in Business Analytics (Honours). Currently I am working as a Data Scientist in NCS Singapore, focusing on delivering both operational and prove-of-concept data science projects to major local clients such as Changi Airport and Land Transport Authority (LTA).
 				<p>Some of my past and active projects are:</p>
 				<ul>
-					<li>Flight Passenger Load Prediction (Airport/POC) - <i>Improved prediction accuracy from existing solution by <b>~20%</b></i></li>
-					<li>Future Taxi Demand Prediction (Airport/Operational) - <i>Customized and robust live predictive engine with <b>~80% </b> accuracy</i></li>
-					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><b>End-to-end</b> data pipeline and Tableau dashboard visualisation</i></li>
+					<li>Flight Passenger Load Prediction (Airport/POC) - <i>Improved prediction accuracy from existing solution by <strong>~20%</strong></i></li>
+					<li>Future Taxi Demand Prediction (Airport/Operational) - <i>Customized and robust live predictive engine with <strong>~80%</strong> accuracy</i></li>
+					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><strong>End-to-end</strong> data pipeline and Tableau dashboard visualisation</i></li>
 				</ul>
 
-				<p>I have proven and successful experiences in predictive modeling, machine learning, data analysis and visualization. With good understanding of various data science algorithms, I am able to engineer and deliver in <b>Python, SQL and Tableau</b>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
-				<p>More about myself can be found in my <a href="/cv">CV</a></p>
+				<p>I have proven and successful experiences in predictive modeling, machine learning, data analysis and visualization. With good understanding of various data science algorithms, I am able to engineer and deliver in <strong>Python, SQL and Tableau</strong>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
+				<p>More about myself can be found in my <a href="./cv/index.html">CV</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
