update cv and change some cosmetics

--- a/cv/index.html
+++ b/cv/index.html
@@ -13,30 +13,70 @@
 		</nav>
 		<div class="cv">
 			<h1>Sun Weiran</h1>
-			<address>
-			<i>P:</i> +65 9791 3684<br>
 			<span>sunwrn@gmail.com</span><br>
-			<span>linkedin.com/in/sun-weiran</span>
-			</address>
+			<span>linkedin.com/in/sun-weiran</span><br>
+			<span>Chinese Citizen, Singapore Permanent Resident</span><br>
 			<h2>Education</h2>
+			<div id='container'>
+				<h3 id='title'>National University of Singapore</h3>
+				<h4 id='date'>2014 Aug - 2018 Jun</h4>
+				<h4 id='content'>Bachelor of Science (Business Analytics) with Honours (Distinction)</h4>
+				<ul class="cv-items"> 
+					<li>Dean's Lister (4.35/5)</li>
+					<li>Certificate of Distinction in Applied Analytics Knowledge Area</li>
+					<li>Certificate of Distinction in Data Science Knowledge Area</li>
+					<li>Science and Technology Undergraduate Scholarship</li>
+				</ul>
+			</div>	
 			<hr>
 			<h2>Work Experiences</h2>
 			<hr>
 			<h2>Personal Projects</h2>
 			<hr>
 			<h2>Certifications</h2>
+			<div id='container'>
+				<h3 id='title'>Big Data Specialization</h3>
+				<h4 id='date'>2019 Oct</h4>
+				<h4 id='content'>MicroMaster course offered by University of California San Diego on Coursera</h4>
+				<ul class="cv-items"> 
+					<li>Introduction to Big Data</li>
+					<li>Big Data Modeling and Management Systems</li>
+					<li>Big Data Integration and Processing</li>
+					<li>Machine Learning with Big Data</li>
+					<li>Graph Analytics for Big Data</li>
+					<li>Capstone Project</li>
+				</ul>
+			</div>
 			<hr>
 			<h2>Skills</h2>
+			<ul class="cv-items"> 
+				<li>Programming Languages: Python, R, Java</li>
+				<li>Databases: Oracle SQL, Neo4j</li>
+				<li>Visualisation: Tableau, HTML, CSS</li>
+				<li>Version Control: Git, SVN</li>
+				<li>Toolkits &amp; Packages: Numpy, Pandas, Scikit-learn, Statsmodels, Xgboost, Selenium, Matplotlib, Seaborn</li>
+				
+			</ul>
 			<hr>
 			<h2>Languages</h2>
+			<ul class="cv-items"> 
+				<li>Chinese: native, fluent in both spoken and writing</li>
+				<li>English: fluent in both spoken and writing</li>
+				<li>Japanese: beginner</li>
+			</ul>
 			<hr>
 			<h2>Hobbies</h2>
+			<ul class="cv-items"> 
+				<li>Chinese debate: former team captain of NUS Chinese Debate Team. Won multiple international championships during college time</li>
+			</ul>
 
 		</div>
 		<footer>
     		<ul>
-        		<li><a href="mailto:sunwrn@gmail.com">Email me</a></li>
-        		<li><a href="https://github.com/ianforme">github.com/ianforme</a></li>
+        		<li><a href="mailto:sunwrn@gmail.com">Email</a></li>
+        		<li><a href="https://linkedin.com/in/sun-weiran">LinkedIn</a></li>
+        		<li><a href="https://github.com/ianforme">Github</a></li>
+        		<li><a href="https://medium.com/@sunwrn">Medium</a></li>
 			</ul>
 		</footer>
 	</body>
