--- a/index.html
+++ b/index.html
@@ -15,22 +15,24 @@
     		<div class="blurb">
         		<h1>Hi there, I'm Sun Weiran!</h1>
         		<h2>Data Scientist</h2>
-				<p>I graduated from National University of Singapore in 2018 with a distinction bachelor degree in Business Analytics (Honours). Currently I am working as a Data Scientist in NCS Singapore, focusing on delivering both operational and prove-of-concept data science projects to major local clients such as Changi Airport and Land Transport Authority (LTA).
-				<p>Some of my past and active projects are:</p>
-				<ul>
+				<p>I graduated from <strong>National University of Singapore</strong> in 2018 with a <strong>distinction bachelor degree in Business Analytics (Honours)</strong>. Currently I am working as a <strong>Data Scientist in NCS Singapore</strong>, focusing on delivering both <strong>operational and prove-of-concept data science projects</strong> to major local clients such as Changi Airport and Land Transport Authority (LTA). Some of my past and active projects are:</p>
+				<ul class="items">
 					<li>Flight Passenger Load Prediction (Airport/POC) - <i>Improved prediction accuracy from existing solution by <strong>~20%</strong></i></li>
-					<li>Future Taxi Demand Prediction (Airport/Operational) - <i>Customized and robust live predictive engine with <strong>~80%</strong> accuracy</i></li>
-					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><strong>End-to-end</strong> data pipeline and Tableau dashboard visualisation</i></li>
+					<li>Future Taxi Demand Prediction (Airport/Operational) - <i>Robust and near real time predictive engine with <strong>~80%</strong> accuracy</i></li>
+					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><strong>End-to-end</strong> data pipeline and Tableau visualisation</i></li>
 				</ul>
 
-				<p>I have proven and successful experiences in predictive modeling, machine learning, data analysis and visualization. With good understanding of various data science algorithms, I am able to engineer and deliver in <strong>Python, SQL and Tableau</strong>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
+				<p>I have proven and successful experiences in <strong>predictive modeling, machine learning, data analysis and visualization</strong>. With good understanding of various data science algorithms, I am able to engineer and deliver in <strong>Python, SQL and Tableau</strong>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
 				<p>More about myself can be found in my <a href="./cv/index.html">CV</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:sunwrn@gmail.com">Email me</a></li>
-        		<li><a href="https://github.com/ianforme">github.com/ianforme</a></li>
+        		<li><a href="mailto:sunwrn@gmail.com">Email</a></li>
+        		<li><a href="https://linkedin.com/in/sun-weiran">LinkedIn</a></li>
+        		<li><a href="https://github.com/ianforme">Github</a></li>
+        		<li><a href="https://medium.com/@sunwrn">Medium</a></li>
+
 			</ul>
 		</footer>
 	</body>
