--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Sun Weiran!</h1>
-        		<h2>Data Scientist</h2>
 				<p>I graduated from <strong>National University of Singapore</strong> in 2018 with a <strong>distinction bachelor degree in Business Analytics (Honours)</strong>. Currently I am working as a <strong>Data Scientist in NCS Singapore</strong>, focusing on delivering both <strong>operational and prove-of-concept data science projects</strong> to major local clients such as Changi Airport and Land Transport Authority (LTA). Some of my past and active projects are:</p>
 				<ul class="items">
 					<li>Flight Passenger Load Prediction (Airport/POC) - <i>Improved prediction accuracy from existing solution by <strong>~20%</strong></i></li>
@@ -22,7 +21,7 @@
 					<li>Road Traffic Speed and Volume Prediction (LTA/Operational) - <i><strong>End-to-end</strong> data pipeline and Tableau visualisation</i></li>
 				</ul>
 
-				<p>I have proven and successful experiences in <strong>predictive modeling, machine learning, data analysis and visualization</strong>. With good understanding of various data science algorithms, I am able to engineer and deliver in <strong>Python, SQL and Tableau</strong>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
+				<p>I have successful experiences in <strong>predictive modeling, machine learning, data analysis and visualization</strong>. With strong understanding of various data science algorithms, I am able to engineer and deliver in <strong>Python, SQL and Tableau</strong>. Believing in sharing and open-source, I am a contributing writer of <a href='https://medium.com/@sunwrn'>Towards Data Science</a> and the author of code encryption Python library <a href='https://pypi.org/project/codimage/'>Codimage</a>.</p>
 				<p>More about myself can be found in my <a href="./cv/index.html">CV</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
