--- a/cv/index.html
+++ b/cv/index.html
@@ -33,7 +33,7 @@
 				<h4 id='date'>2014 Aug - 2018 Jun</h4>
 				<h4 id='content'>Bachelor of Science (Business Analytics) with Honours (Distinction)</h4>
 				<ul class="cv-items"> 
-					<li>Dean's Lister (4.35/5)</li>
+					<li>Dean's Lister</li>
 					<li>Certificate of Distinction in Applied Analytics Knowledge Area</li>
 					<li>Certificate of Distinction in Data Science Knowledge Area</li>
 					<li>Science &amp; Technology Undergraduate Scholarship</li>
