update resume download

--- a/cv/index.html
+++ b/cv/index.html
@@ -23,6 +23,7 @@
 				</div>
 
 				<div id='date'>
+					<a href="../resume/SunWeiran-resume-201910.pdf">Download Resume</a><br>
 					<img src="../img/portrait.jpg" alt="Portrait">
 				</div>
 			</div>
