update with master degree

--- a/cv/index.html
+++ b/cv/index.html
@@ -30,7 +30,10 @@
 			<hr id='content'>
 			<h2>Education</h2>
 			<div id='container'>
-				<h3 id='title'>National University of Singapore</h3>
+				<h3 id='title'>National University of Singapore (Graduate)</h3>
+				<h4 id='date'>2020 Jan - 2022 Dec</h4>
+				<h4 id='content'>Master of Computing with Artificial Intelligence Specialization (MComp)</h4><br>
+				<h3 id='title'>National University of Singapore (Undergraduate)</h3>
 				<h4 id='date'>2014 Aug - 2018 Jun</h4>
 				<h4 id='content'>Bachelor of Science (Business Analytics) with Honours (Distinction)</h4>
 				<ul class="cv-items"> 
